# WEB_HW_7

./: .gitignore  alembic.ini  my_select.py  pyproject.toml
alembic/versions/: 4dee4c72c0c6_init.py
conf/: db.py  models.py
seeds/: seed.py
